--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Barber Shop</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">Servicio Especializado en Cabello y Barba</h2>
-          <a href="inicio.html" class="btn btn-light js-scroll-trigger"><strong>iniciar</strong></a>
+          <a href="https://scharss.github.io/barberapp/" class="btn btn-light js-scroll-trigger"><strong>iniciar</strong></a>
         </div>
       </div>
     </header>
